--- a/src/main/resources/templates/Fragments/logout.html
+++ b/src/main/resources/templates/Fragments/logout.html
@@ -1,26 +1,17 @@
-<div th:fragment="logout" class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header" >
-                <table id="tableModalTitle" >
-                    <tr>
-                        <td>
-                    <center>
-                        <h4 class="modal-title" style="white-space: nowrap;" id="exampleModalLabel">Deslogar</h4>
-                    </center>
-                    </td>
-                    </tr>
-                </table>
-            </div>
-
-            <div class="modal-body" style="background-color: #f2f7f982">
-
-                Olá, deseja mesmo encerrar a sessão?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Voltar</button>
-                <a th:href="@{/logout}"><button type="submit" class="btn btn-primary" >Sim, sair</button></a>
+    <div th:fragment="logout"  class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">Você realmente deseja sair?</div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+                    <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
