--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -1,11 +1,12 @@
 <head th:fragment="header"> 
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>        
- 
-        <link rel="stylesheet" type="text/css" th:href="@{css/sb-admin-2.min.css}"/>
-        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>   
+        <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/> 
+        <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/sb-admin-2.min.css}"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"/>    
+        <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css"/>    
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
 </head>
