--- a/src/main/resources/templates/Avaliacao/Avaliacao.html
+++ b/src/main/resources/templates/Avaliacao/Avaliacao.html
@@ -1,96 +1,154 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head th:replace="Fragments/header :: header"></head>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/drilldown.js"></script>
-    <style>
-        .row {
-            padding: 5px;
-        }
-        .col {
-            margin: 5px;
-        }
-        .card-header {
-            margin: 0 -30;
-        }
-        img {
-            max-width:150px;
-            max-height:100px;
-            width: auto;
-            height: auto;
-        }
-    </style>
-    <body>
-            <div id="wrapper">
-                    <ul th:replace="Fragments/sideBar :: sidebar"></ul>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
-                    <div id="content-wrapper" class="d-flex flex-column">
-                        <!--INCLUI -->
-                        
-                        <div id="content">
-                            <nav th:replace="Fragments/topnav :: topnav"></nav>
-                            <div th:replace="Fragments/logout :: logout"></div>
-                            <div class="container-fluid">  
+<head th:replace="Fragments/header :: header"></head>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/drilldown.js"></script>
+<style>
+    .row {
+        padding: 5px;
+    }
+    
+    .col {
+        margin: 5px;
+    }
+    
+    .card-header {
+        margin: 0 -30;
+    }
+    
+    img {
+        max-width: 150px;
+        max-height: 100px;
+        width: auto;
+        height: auto;
+    }
+</style>
 
-                            <div class="row">
-                            <div class="card col">
-                                
-                                   <div th:each="aluno:${aluno}" class="container-fluid">
-                                        <div  class="card-header">
-                                            <center>Aluno</center>
-                                        </div>
-                                        <th:block th:each="aluno : ${aluno}">
-                                        <div class="card-body">
-                                            <div class="row">
-                                                <div class="col-md-2 padding-0">
-                                                    <img alt="User Pic" th:src="@{/images/user_image.png}" id="profile-image1" class="rounded-circle img-responsive"/>                                                                                                    
-                                                </div>   
-                                                <div class="col-md-2 padding-0">
-                                                        <div class="input-group mb-3">
-                                                                <div class="input-group-prepend">
-                                                                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
-                                                                </div>
-                                                                <input type="text" class="form-control border" name="nome" id="nome_aluno" th:field="${aluno.nome}" placeholder="Digite o nome do Aluno.." />
-                                                            </div>
-                                                </div>
+<body>
+    <div id="wrapper">
+        <ul th:replace="Fragments/sideBar :: sidebar"></ul>
+
+        <div id="content-wrapper" class="d-flex flex-column">
+            <!--INCLUI -->
+
+            <div id="content">
+                <nav th:replace="Fragments/topnav :: topnav"></nav>
+                <div th:replace="Fragments/logout :: logout"></div>
+
+                <div class="container-fluid">
+                    
+                    <th:block th:each="aluno : ${aluno}">
+                        <div class="row">
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-left-primary shadow h-100 py-2">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Aluno</div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span th:text="${aluno.nome}"></span></div>
+                                            </div>
+                                            <div class="col-auto">
+                                                <i class="fas fa-user fa-2x text-gray-300"></i>
                                             </div>
                                         </div>
-                                        </th:block>
-                                    
                                     </div>
-                               
                                 </div>
-                                </div>
-                                <div class="row">
-                                    <div class="card col">
-                                        <div class="container-fluid">
-                                            <div id="lineChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>                                        
+                            </div>
+                            
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-left-success shadow h-100 py-2">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Data de Nascimento</div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span th:text="${aluno.dataNascimento}"></span></div>
+                                            </div>
+                                            <div class="col-auto">
+                                               <i class="fas fa-birthday-cake fa-2x text-gray-300"></i>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>                                 
-                                <div class="row">
-                                  <div class="card col chart1">
-                                        <div class="container-fluid">
-                                            <div id="pizzaChart" style="min-width: px; height: 400px; "></div>
-                                        </div>
-                                    </div>      
+                                </div>
+                            </div>
+                            
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-left-success shadow h-100 py-2">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Sexo</div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                                
+                                                            <span th:if="${aluno.sexo =='1'}">MASCULINO</span>
+                                                            <span th:unless="${aluno.sexo == '2'}">FEMININO</span>
+                                                </div>
+                                            </div>
+                                            <div class="col-auto">
+                                                <i class="fas fa-venus-mars fa-2x text-gray-300"></i>
 
-                                  <div class="card col chart2">
-                                        <div class="container-fluid">
-                                            <div id="barChart" style="min-width: px; height: 400px; "></div>
+                                            
+                                            </div>
                                         </div>
-                                    </div>       
-                                </div>                                    
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-left-success shadow h-100 py-2">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Ultima Avaliação</div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span th:text="${aluno.ultimaAvaliacao}"></span></div>
+                                            </div>
+                                            <div class="col-auto">
+                                                <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </th:block>
+                        
+                    <hr/>
+
+                    <div class="row">
+                        <div class="card col">
+                            
+                            <div class="container-fluid">
+                                    <div class="card-header">
+                                            <center>Histórico</center>
+                                        </div>
+                                <div id="lineChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
                             </div>
                         </div>
                     </div>
+                    <hr/>
+
+                    <div class="row">
+                        <div class="card col chart1">
+                            <div class="container-fluid">
+                                <div id="pizzaChart" style="min-width: px; height: 400px; "></div>
+                            </div>
+                        </div>
+
+                        <div class="card col chart2">
+                            <div class="container-fluid">
+                                <div id="barChart" style="min-width: px; height: 400px; "></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </body>
+        </div>
+    </div>
+</body>
 
         <footer th:replace="Fragments/footer :: footer"></footer>
         <script th:inline="javascript">
