--- a/src/main/resources/templates/Avaliacao/Avaliacao.html
+++ b/src/main/resources/templates/Avaliacao/Avaliacao.html
@@ -106,7 +106,7 @@
                                                 <div class="h5 mb-0 font-weight-bold text-gray-800"><span th:text="${aluno.ultimaAvaliacao}"></span></div>
                                             </div>
                                             <div class="col-auto">
-                                                <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                                <i class="fas fa-calendar fa-2x text-gray-300"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -119,7 +119,7 @@
                     <hr/>
 
                     <div class="row">
-                        <div class="card col">
+                        <div class="card shadow mb-4 col">
                             
                             <div class="container-fluid">
                                     <div class="card-header">
@@ -132,15 +132,34 @@
                     <hr/>
 
                     <div class="row">
-                        <div class="card col chart1">
+                        <div class="card shadow mb-4 col chart1">
                             <div class="container-fluid">
                                 <div id="pizzaChart" style="min-width: px; height: 400px; "></div>
                             </div>
                         </div>
 
-                        <div class="card col chart2">
+                        <div class="card shadow mb-4 col chart2">
                             <div class="container-fluid">
                                 <div id="barChart" style="min-width: px; height: 400px; "></div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="row">
+                    <div class="card col shadow mb-4 chart2">
+                            <div class="container-fluid">
+                                    <table class="table table-bordered table-striped table-hover" id="dataTable" width="100%" cellspacing="0">
+                                            <thead>
+                                                    <tr>
+                                                        <th>DATA DA AVALIAÇÃO</th>
+                                                        <th>MASSA</th>
+                                                        <th>MASSA DE GORDURA</th>
+                                                        <th>MASSA MAGRA</th>
+                                                        <th>IMC</th>
+                                                        <th>PGGG</th>
+                                                    </tr>
+                                                </thead>
+                                    </table>
                             </div>
                         </div>
                     </div>
@@ -156,6 +175,8 @@
             var objeto = [[${avaliacoes}]];
             /*]]>*/
         </script>
-        <script th:src="@{/js/Graficos/DashboardAluno.js}" >            
+        <script th:src="@{/js/Graficos/DashboardAluno.js}">
+            var data = JSON.parse(objeto)
         </script>
+        <script th:src="@{/js/Tabelas/TableDashboardAluno.js}"></script>            
 </html>
