--- a/src/main/resources/templates/Fragments/footer.html
+++ b/src/main/resources/templates/Fragments/footer.html
@@ -3,4 +3,11 @@
     <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{/js/functions.js}"></script>
     <script th:src="@{/js/sb-admin-2.min.js}"></script>
+    
+    <!-- Page level plugins -->
+    <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
+    <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
+
+    <!-- Page level custom scripts -->
+    <script th:src="@{/js/demo/datatables-demo.js}"></script>
 </footer>
